--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Repo</title>
+    <script type="text/javascript" src="dist/main.js" defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <repos data-user="octocat" data-update="2019-05-01"></repos>
+    <repos data-user="devballteam" data-update="2019-05-01"></repos>
+    <repos data-user="wrongaddress" data-update="2019-05-01"></repos>
   </body>
 </html>
