--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Repo</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet/less" type="text/css" href="src/styles.less" />
+    <script src="dist/less.js" type="text/javascript"></script>
     <script type="text/javascript" src="dist/main.js" defer></script>
   </head>
   <body>
